--- a/source/catalog.html
+++ b/source/catalog.html
@@ -10,32 +10,32 @@
 
 <body>
   <header class="page-header">
-      <div class="container">
-        <div class="page-header__wrapper">
-          <a class="page-header__logo" href="index.html">
-            <img class="page-header__logo-img" src="img/logo-mobile.svg" width="190" height="37" alt="Логотип Cat Energy">
-          </a>
-          <button class="page-header__btn " type="button">Открыть меню</button>
-          <nav class="page-header__nav">
-            <ul class="page-header__main-menu main-menu">
-                <li class="main-menu__item main-menu__item--active">
-                  <a class="main-menu__link">Главная</a>
-                </li>
-                <li class="main-menu__item">
-                  <a class="main-menu__link" href="catalog.html">Каталог продукции</a>
-                </li>
-                <li class="main-menu__item">
-                  <a class="main-menu__link" href="form.html">Подбор программы</a>
-                </li>
-            </ul>
-          </nav>
-        </div>
+    <div class="page-header__container">
+      <div class="page-header__wrapper">
+        <a class="page-header__logo" href="index.html">
+          <img class="page-header__logo-img" src="img/logo-mobile.svg" width="190" height="37" alt="Логотип Cat Energy">
+        </a>
+        <button class="page-header__btn " type="button">Открыть меню</button>
+        <nav class="page-header__nav">
+          <ul class="page-header__main-menu main-menu">
+            <li class="main-menu__item">
+              <a class="main-menu__link" href="index.html">Главная</a>
+            </li>
+            <li class="main-menu__item main-menu__item--active">
+              <a class="main-menu__link">Каталог продукции</a>
+            </li>
+            <li class="main-menu__item">
+              <a class="main-menu__link" href="form.html">Подбор программы</a>
+            </li>
+          </ul>
+        </nav>
       </div>
+    </div>
   </header>
   <main>
     <h1 class="visually-hidden">Cat Energy</h1>
-    <div class="container">
-      <section class="catalog">
+    <section class="catalog">
+      <div class="catalog__container">
         <h2 class="catalog__title">Каталог продукции</h2>
         <ul class="catalog__list">
           <li class="catalog__item">
@@ -210,8 +210,8 @@
             <a class="more__btn button" href="#">Показать все</a>
           </li>
         </ul>
-      </section>
-    </div>
+      </div>
+    </section>
     <section class="add-product"></section>
     <section class="contacts">
       <h2 class="visually-hidden">Месторасположение магазина Cat Energy на карте</h2>
@@ -223,38 +223,38 @@
     </section>
   </main>
   <footer class="page-footer">
-      <div class="container page-footer__wrapper">
-        <a class="page-footer__logo" href="index.html">
-          <img class="page-footer__logo-img" src="img/logo-footer.svg" width="128" height="24" alt="Cat Energy">
-        </a>
-        <div class="page-footer__social social">
-          <h2 class="visually-hidden">Мы в социальных сетях</h2>
-          <ul class="social__list">
-            <li class="social__item">
-              <a class="social__link social__link--vk" href="#">
-                <span class="visually-hidden">Вконтакте</span>
-              </a>
-            </li>
-            <li class="social__item">
-              <a class="social__link social__link--instagram" href="#">
-                <span class="visually-hidden">Инстаграм</span>
-              </a>
-            </li>
-            <li class="social__item">
-              <a class="social__link social__link--fb" href="#">
-                <span class="visually-hidden">Фейсбук</span>
-              </a>
-            </li>
-          </ul>
-        </div>
-        <div class="page-footer__copyright copyright">
-          <h2 class="visually-hidden">Логотип разработчика сайта</h2>
-          <a class="copyright__link" href="https://htmlacademy.ru" target="_blank">
-            HTML Academy
-            <img class="copyright__logo" src="img/htmlacademy.svg" alt="Логотип HTMLAcademy" width="27" height="35">
-          </a>
-        </div>
+    <div class="page-footer__container">
+      <a class="page-footer__logo" href="index.html">
+        <img class="page-footer__logo-img" src="img/logo-footer.svg" width="128" height="24" alt="Cat Energy">
+      </a>
+      <div class="page-footer__social social">
+        <h2 class="visually-hidden">Мы в социальных сетях</h2>
+        <ul class="social__list">
+          <li class="social__item">
+            <a class="social__link social__link--vk" href="#">
+              <span class="visually-hidden">Вконтакте</span>
+            </a>
+          </li>
+          <li class="social__item">
+            <a class="social__link social__link--instagram" href="#">
+              <span class="visually-hidden">Инстаграм</span>
+            </a>
+          </li>
+          <li class="social__item">
+            <a class="social__link social__link--fb" href="#">
+              <span class="visually-hidden">Фейсбук</span>
+            </a>
+          </li>
+        </ul>
       </div>
+      <div class="page-footer__copyright copyright">
+        <h2 class="visually-hidden">Логотип разработчика сайта</h2>
+        <a class="copyright__link" href="https://htmlacademy.ru" target="_blank">
+          HTML Academy
+          <img class="copyright__logo" src="img/htmlacademy.svg" alt="Логотип HTMLAcademy" width="27" height="35">
+        </a>
+      </div>
+    </div>
   </footer>
 </body>
 
