--- a/source/index.html
+++ b/source/index.html
@@ -11,31 +11,29 @@
 <body>
 
   <header class="page-header">
-    <div class="container">
-      <div class="page-header__wrapper">
-        <a class="page-header__logo">
-          <img class="page-header__logo-img" src="img/logo-mobile.svg" width="190" height="37" alt="Логотип Cat Energy">
-        </a>
-        <button class="page-header__btn " type="button">Открыть меню</button>
-        <nav class="page-header__nav">
-          <ul class="page-header__main-menu main-menu">
-              <li class="main-menu__item main-menu__item--active">
-                <a class="main-menu__link">Главная</a>
-              </li>
-              <li class="main-menu__item">
-                <a class="main-menu__link" href="catalog.html">Каталог продукции</a>
-              </li>
-              <li class="main-menu__item">
-                <a class="main-menu__link" href="form.html">Подбор программы</a>
-              </li>
-          </ul>
-        </nav>
-      </div>
+    <div class="page-header__container">
+      <a class="page-header__logo">
+        <img class="page-header__logo-img" src="img/logo-mobile.svg" width="190" height="37" alt="Логотип Cat Energy">
+      </a>
+      <button class="page-header__btn " type="button">Открыть меню</button>
+      <nav class="page-header__nav">
+        <ul class="page-header__main-menu main-menu">
+          <li class="main-menu__item main-menu__item--active">
+            <a class="main-menu__link">Главная</a>
+          </li>
+          <li class="main-menu__item">
+            <a class="main-menu__link" href="catalog.html">Каталог продукции</a>
+          </li>
+          <li class="main-menu__item">
+            <a class="main-menu__link" href="form.html">Подбор программы</a>
+          </li>
+        </ul>
+      </nav>
     </div>
   </header>
   <main class="page-main">
     <h1 class="visually-hidden">Cat Energy</h1>
-    <div class="container promo-container">
+    <div class="promo__container">
       <section class="promo">
         <h2 class="promo__title">Функциональное питание для котов</h2>
         <p class="promo__content">Занялся собой? Займись котом</p>
@@ -45,7 +43,7 @@
     </div>
     <section class="programs">
       <h2 class="visually-hidden">Программы для котов</h2>
-      <div class="container">
+      <div class="programs__container">
         <ul class="programs__list">
           <li class="programs__item program program--slim">
             <h3 class="program__title">Похудение</h3>
@@ -62,7 +60,7 @@
     </section>
     <section class="advantages">
       <h2 class="visually-hidden">Преимущества функционального питания Cat Energy</h2>
-      <div class="container">
+      <div class="advantages__container">
         <p class="advantages__title">Как это работает</p>
         <ul class="advantages__list">
           <li class="advantages__item advantages__item--leaf">
@@ -81,7 +79,7 @@
       </div>
     </section>
     <section class="example">
-      <div class="container">
+      <div class="example__container">
         <div class="example__wrapper">
           <h2 class="example__title">Живой пример</h2>
           <p class="example__content">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.</p>
@@ -98,7 +96,7 @@
     </section>
   </main>
   <footer class="page-footer">
-    <div class="container page-footer__wrapper">
+    <div class="page-footer__container">
       <a class="page-footer__logo">
         <img class="page-footer__logo-img" src="img/logo-footer.svg" width="128" height="24" alt="Cat Energy">
       </a>
